--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "github-fetcher-fullstack-v2",
+  "name": "birthday-news-reader",
   "version": "1.0.0",
-  "description": "",
+  "description": "Give us your birth day, we'll give you the world",
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js"
   },
-  "author": "Beth Johnson",
+  "author": "Mauricio Feldman-Abe",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.23.1",
@@ -18,12 +18,17 @@
   },
   "dependencies": {
     "angular": "^1.6.3",
+    "axios": "^0.18.0",
+    "babel": "^6.23.0",
     "body-parser": "^1.17.2",
+    "bundle": "^2.1.0",
     "express": "^4.15.0",
-    "jquery": "^3.1.1",
+    "jquery": "^3.3.1",
     "mongoose": "^4.8.6",
     "mysql": "^2.13.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "nodemon": "^1.18.4",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
+    "request": "^2.88.0"
   }
 }
