--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "your-birthday-news",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Give us your birth day, we'll give you the world",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "body-parser": "^1.18.3",
     "bundle": "^2.1.0",
     "express": "^4.16.4",
+    "mongod": "^2.0.0",
     "mongoose": "^5.5.4",
     "nodemon": "^1.18.11",
     "react": "^16.8.6",
