--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mauricio Feldman-Abe",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.19.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
@@ -17,15 +18,13 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
-    "angular": "^1.6.3",
-    "axios": "^0.18.0",
     "babel": "^6.23.0",
     "body-parser": "^1.17.2",
     "bundle": "^2.1.0",
     "express": "^4.15.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.14",
     "mongoose": "^4.8.6",
-    "mysql": "^2.13.0",
     "nodemon": "^1.18.4",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
