--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
   "devDependencies": {
     "axios": "^0.19.0",
     "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "acorn": "^7.1.1",
     "babel": "^6.23.0",
     "body-parser": "^1.17.2",
     "bundle": "^2.1.0",
     "express": "^4.15.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.14",
+    "minimist": "^1.2.5",
     "mongoose": "^5.7.11",
-    "nodemon": "^1.18.4",
+    "nodemon": "^2.0.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "request": "^2.88.0"
