--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "Mauricio Feldman-Abe",
   "license": "ISC",
   "devDependencies": {
-    "axios": "^0.19.0",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "axios": "^0.19.2",
     "babel-core": "^6.23.1",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "webpack": "^4.42.1"
   },
   "dependencies": {
     "acorn": "^7.1.1",
@@ -26,7 +28,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.14",
     "minimist": "^1.2.5",
-    "mongoose": "^5.7.11",
+    "mongoose": "^5.9.6",
     "nodemon": "^2.0.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
